# EvaluationFramework

./: AI_USAGE.md  LICENSE  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
doc/: contributions.md  index.md
doc/design/: dirstructure.md  index.md
doc/user/: Basic_demonstration.md  algorithms.md  index.md  introduction.md  module_descriptions.md  prepare.md  reporting.md  visualization.md
src/evaluation/algorithms/: basic_algorithms.py
src/evaluation/core/: algorithm.py  dataset.py  image_generator.py  metric.py
src/evaluation/datasets/: constant_level_data.py  image_loader.py
src/evaluation/io/: readers.py
src/evaluation/metrics/: basemetrics.py  outliermetrics.py
src/evaluation/runner/: basic_runner.py
src/evaluation/utils/: disks.py  metrics.py  testpatterns.py
src/notebooks/: metric_evel.ipynb
src/scripts/: basic_evaluation.py  showlast.py  test_eval.py
src/tests/: test_basemetrics.py
