[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evaluation-framework"
version = "0.1.0"
description = "Generalized framework for systematic evaluation of algorithms"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.16,<2",
    "matplotlib>=3.10,<4",
    "seaborn",
    "pandas>=2.0,<3",
    "scikit-learn>=1.8,<2",
    "scikit-image>=0.25,<0.26",
    "uncertainties>=3.2,<4",
    "ipywidgets>=8.1,<9",
    "astropy>=7.2,<8",
    "tifffile>=2025.1",
    "tqdm>=4.67,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pybind11>=3.0,<4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation"]